# claude-alerts

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: test.yml
claude_alerts/: __init__.py  __main__.py  binder.py  colors.py  config.py  contexts.py  daemon.py  dashboard.py  events.py  ingester.py  limits.py  overlay.py  persistence.py  pricing.py  sessions.py  transcripts.py  x11.py
docs/superpowers/plans/: 2026-04-09-claude-alerts-implementation.md  2026-04-09-overlay-binding-and-stacking-plan.md  2026-04-16-overlay-idle-pause-correctness.md  2026-05-01-context-window-dashboard.md
docs/superpowers/specs/: 2026-04-09-claude-agent-status-monitor-design.md  2026-04-09-overlay-binding-and-stacking-design.md  2026-04-16-overlay-idle-pause-correctness-design.md  2026-04-28-binding-persistence-design.md  2026-04-28-stdout-dashboard-design.md  2026-05-01-context-window-dashboard-design.md
scripts/: claude-alerts.service  install-hooks.py
scripts/hooks/: emit-event.sh  statusline.sh
tests/: conftest.py  test_binder.py  test_colors.py  test_config.py  test_contexts.py  test_daemon_binding_trigger.py  test_daemon_contexts.py  test_daemon_focus.py  test_daemon_threading.py  test_dashboard.py  test_e2e_xvfb.py  test_events.py  test_hook_script.py  test_ingester.py  test_install.py  test_limits.py  test_overlay_smoke.py  test_persistence.py  test_pricing.py  test_sessions.py  test_statusline_sh.py  test_transcripts.py  test_x11.py
