[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-alerts"
version = "0.1.0"
description = "Visual status monitor for Claude Code agents"
requires-python = ">=3.10"
dependencies = [
    "python-xlib>=0.33",
    "inotify_simple>=1.3.5",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
claude-alerts = "claude_alerts.__main__:main"

[tool.setuptools.packages.find]
include = ["claude_alerts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
