[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-alerts"
version = "0.4.0"
description = "X11 status overlays and rate-limit dashboard for Claude Code agent terminals"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abhishek Shinde" }]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "x11", "overlay", "rate-limit", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "python-xlib>=0.33",
    "inotify_simple>=1.3.5",
    "tomli>=2.0; python_version<'3.11'",
]

# Set [project.urls] when the repo is published, e.g.
# Homepage = "https://github.com/<owner>/claude-alerts"
# Issues   = "https://github.com/<owner>/claude-alerts/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
claude-alerts = "claude_alerts.__main__:main"

[tool.setuptools.packages.find]
include = ["claude_alerts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
